--- a/flutter_database_async/pubspec.yaml
+++ b/flutter_database_async/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_offline: "^2.1.0"
   sqflite: ^2.0.2
   path: ^1.8.0
+  mask_text_input_formatter: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
